# NotesBroBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.docker.example.yaml  settings.example.yaml
src/notesbro_bot/: __init__.py  __main__.py  bot.py  config.py  db.py  main.py  models.py  note_summary.py
tests/: test_add_session.py  test_config.py  test_db.py  test_note_format.py  test_note_parse.py
